--- a/assets/headercustom.css
+++ b/assets/headercustom.css
@@ -781,7 +781,7 @@ ul.menu li.column-1 .submenu > li > a i {
 
 #mega-mobile > ul.menu > li > a.dropdown .btn-dropdown:after,
 .btn-dropdown-child:after {
-	content:'\f107';
+	content:'\2192';
 }
 
 #mega-mobile > ul.menu > li > a.dropdown .btn-dropdown.active:after,
