--- a/assets/headercustom.css
+++ b/assets/headercustom.css
@@ -94,7 +94,7 @@ ul {
 	top:-40px;
 	opacity:0;
 	visibility:hidden;
-	height:516px;
+	height:auto;
 	-webkit-transition:all 0.3s ease-in-out;
 	-moz-transition:all 0.3s ease-in-out;
 	-ms-transition:all 0.3s ease-in-out;
