--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -17,6 +17,10 @@
     justify-self: start;
     margin-left: -1.2rem;
   }
+  header{
+    display: flex;
+    justify-content: space-between;
+  }
 
   {%- if section.settings.sticky_header_type == 'reduce-logo-size' -%}
     .scrolled-past-header .header__heading-logo-wrapper {
