--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -18,8 +18,8 @@
     margin-left: -1.2rem;
   }
   header{
-    display: flex;
-    justify-content: space-between;
+    display: flex !important;
+    justify-content: space-between !important;
   }
 
   {%- if section.settings.sticky_header_type == 'reduce-logo-size' -%}
