--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -20,7 +20,7 @@
           <div class="row">
             <div class="col-md-3 col-2">
               <div id="mega-menu">
-                <div class="btn-mega"><span></span>ALL CATEGORIES</div>
+                <div class="btn-mega"><span></span>CATEGORIES</div>
                 <ul class="menu">
                   {%- for link in section.settings.l_menu.links -%}
                   <li>
