--- a/assets/headercustom.css
+++ b/assets/headercustom.css
@@ -39,7 +39,7 @@ ul {
 	height:65px;
 	padding-left:87px;
 	line-height:65px;
-	background-color:#484848;
+	background-color:#f9912f;
 	position:relative;
 	z-index:98;
 	cursor:pointer;
