--- a/assets/headercustom.css
+++ b/assets/headercustom.css
@@ -1,6 +1,8 @@
 /* Header Bottom */ 
 ul {
     list-style: none;
+	margin: 0;
+	padding: 0;
 }
 .header-bottom {
 	background-color:rgb(var(--color-button));
