--- a/assets/headercustom.css
+++ b/assets/headercustom.css
@@ -111,6 +111,7 @@ ul {
 	border-bottom:1px solid #e5e5e5;
 	display:block;
 	position:relative;
+	text-wrap: nowrap;
 }
 
 #mega-menu > ul.menu > li:last-child > a {
