--- a/assets/headercustom.css
+++ b/assets/headercustom.css
@@ -175,6 +175,12 @@ ul {
 	font-weight:bold;
 	margin-bottom:20px;
 }
+#mega-menu > ul.menu > li .drop-menu > .one-third .cat-title a{
+	color:#f9912f;
+	font-size:16px;
+	font-weight:bold;
+	margin-bottom:20px;
+}
 
 #mega-menu > ul.menu > li .drop-menu > .one-third ul li {
 	margin-bottom:5px;
