--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -279,7 +279,7 @@
     </div>
   </header>
     
-  <div class="new-header-search d-block d-sm-none">
+  <div class="new-header-search d-none d-sm-block">
     {% render 'new-header-search'%} 
   </div>
 
