--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -164,7 +164,7 @@
       {%- endif -%}
     {%- endif -%}
 
-    <div class="new-header-search d-none d-sm-block">
+    <div class="new-header-search d-block d-sm-none">
       {% render 'new-header-search'%} 
     </div>
 
