--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -164,9 +164,9 @@
       {%- endif -%}
     {%- endif -%}
 
-    {% comment %} <div class="new-header-search d-none d-sm-block"> {% endcomment %}
+    <div class="new-header-search d-none d-sm-block">
       {% render 'new-header-search'%} 
-    {% comment %} </div> {% endcomment %}
+    </div>
 
     {%- if section.settings.logo_position == 'middle-center' -%}
       {%- if request.page_type == 'index' -%}
