--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -85,10 +85,16 @@
     position: sticky; /* This is for fixing a Safari z-index issue. PR #2147 */
     margin-bottom: {{ section.settings.margin_bottom | times: 0.75 | round: 0 }}px;
   }
+  .new-header-search{
+    width: 75%
+  }
 
   @media screen and (min-width: 750px) {
     .section-header {
       margin-bottom: {{ section.settings.margin_bottom }}px;
+    }
+    .new-header-search{
+    width: 100%
     }
   }
 
