--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -92,6 +92,11 @@
   @media screen and (min-width: 750px) {
     .section-header {
       margin-bottom: {{ section.settings.margin_bottom }}px;
+   
+  }
+  @media screen and (max-width: 750px) {
+    .section-header {
+      margin-bottom: {{ section.settings.margin_bottom }}px;
     }
     .new-header-search{
     width: 100%
