--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -94,10 +94,7 @@
       margin-bottom: {{ section.settings.margin_bottom }}px;
    
   }
-  @media screen and (max-width: 750px) {
-    .section-header {
-      margin-bottom: {{ section.settings.margin_bottom }}px;
-    }
+  @media screen and (min-width: 576px) {
     .new-header-search{
     width: 100%
     }
