--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -1,6 +1,13 @@
 {{ 'component-card.css' | asset_url | stylesheet_tag }}
 {{ 'section-collection-list.css' | asset_url | stylesheet_tag }}
 
+<style>
+  .card__media {
+  text-align: center;
+  position: absolute;
+}
+</style>
+
 <div class="page-width">
   <h1 class="title title--primary inline-richtext{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}">
     {{ section.settings.title }}
